--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && echo '/*    /index.html   200' > build/_redirects",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "build:server": "npx tsc",
