--- a/.env.demo
+++ b/.env.demo
@@ -1,2 +1,13 @@
+source .privateKey
+ # put your private key in a separate .privateKey file
+export publicKey=""
+export INFURA_PROJECT_ID=""
+export INFURA_API_KEY=""
+export REACT_APP_MORALIS_SERVER_URL=""
+export REACT_APP_MORALIS_APP_ID=""
+export ETHERSCAN_API_KEY=""
+export BSCSCAN_API_KEY=""
+export REACT_APP_GELATO_RELAY_API_KEY=""
 REACT_APP_GELATO_RELAY_API_KEY=""
 REACT_APP_WEB3_AUTH_CLIENT_ID=""
+#REACT_APP_GELATO_RELAY_API_KEY=""
