--- a/src/config-chains.json
+++ b/src/config-chains.json
@@ -12,6 +12,7 @@
         "RPC_URL": "https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161",
         "FAUCET_URLS": [
             "https://goerlifaucet.com"
-        ]
+        ],
+        "RENTABLE_NFT_ADDRESS": "0x8842da19ef17d1a10875e0ebddb6981e178b90d2"
     }
 }
